# DNFC

./: CMakeLists.txt  CMakeLists.txt.in  Dockerfile  LICENSE  README.md  docker-compose.yml
examples/DPI/: deep_packet_inspection.c
include/DNFC/: DNFC.h
libs/SMR/: hazard_pointer.c  hazard_pointer.h
libs/byte_stream/: byte_stream.c  byte_stream.h
libs/hash_table/: FNV-1.c  FNV-1.h  FNV-1a.c  FNV-1a.h  hash_table.c  hash_table.h  murmur3.c  murmur3.h
libs/linked_list/: linked_list.c  linked_list.h
libs/memory_management/: memory_management.c  memory_management.h
libs/packet_parsing/: packet_parsing.h
libs/queue/: queue.c  queue.h
libs/thread_pool/: job_queue.c  thread_pool.c
src/: CMakeLists.txt  DNFC.c  DNFC.h
src/SMR/: hazard_pointer.c  hazard_pointer.h  hazardpointer.cpp  hazardpointer.hpp
src/SMR/tests/: hazard_pointer_test.cpp
src/classifier_rule/: classifierrule.hpp
src/classifiers/classifier_rule/: classifier_field.h  classifier_rule.h
src/classifiers/dynamic_classifiers/: dynamic_classifiers.h
src/classifiers/dynamic_classifiers/flow_table/: flow_table.c  flow_table.h
src/classifiers/static_classifiers/: static_classifiers.h
src/classifiers/static_classifiers/hypercuts/: hypercuts.c  hypercuts.h
src/flow_table/: flow_table.h
src/flow_table/tests/: flow_table_test.cpp
src/hash_table/: FNV-1a.c  hash_table.c  hashtable.hpp  hashtablelf.hpp  murmur3.c  murmur3.hpp
src/hash_table/tests/: hash_table_test.cpp
src/hypercuts/: hypercuts.hpp  hypercuts_bckp.c  hypercuts_bckp.h
src/hypercuts/tests/: hypercuts_test.cpp
src/linked_list/: linked_list.h  linkedlistlf.cpp  linkedlistlf.hpp
src/linked_list/tests/: linked_list_test.cpp
src/memory_management/: memorymanager.cpp  memorymanager.hpp
src/memory_pool/: memorypool.hpp
src/packet_parsing/: packet_parsing.c  packet_parsing.h
src/protocols/: protocol.h
src/protocols/TCP/: TCP.c  TCP.h
src/queue/: queue.h
src/queue/tests/: queue_test.cpp
src/thread_pool/: job_queue.h  thread_pool.h
tests/: DNFC_test.cpp  classifier_tree_test.cpp  flow_table_test.cpp  hash_table_test.cpp  hypercuts_test.cpp  linked_list_test.cpp  queue_test.cpp
tests/tools/: random_number_generator.cpp  random_number_generator.h  test_iterator.cpp  test_iterator.h
